--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.79",
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
+    "axios": "^1.6.7",
     "craco-less": "^3.0.1",
     "eslint": "^8.56.0",
     "normalize.css": "^8.0.1",
@@ -48,11 +49,13 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.34",
     "@typescript-eslint/eslint-plugin": "^6.20.0",
     "@typescript-eslint/parser": "^6.20.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.33.2",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "styled-components": "^6.1.8"
   }
 }
